# Eco-Track

./: .env.example  .gitignore  LICENSE  README.md  firebase-applet-config.json  firebase-blueprint.json  firestore.rules  index.html  metadata.json  package-lock.json  package.json  server.ts  start.ps1  vitest.config.ts
.obsidian/: workspace.json
ai_prototype/: README.md  ecotrack_ai.db  requirements.txt
ai_prototype/app/: main.py
backend/: alembic.ini  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements.txt  test_logger.py
backend/alembic/: env.py  script.py.mako
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: router.py
backend/app/api/v1/analytics/: router.py
backend/app/api/v1/auth/: router.py
backend/app/api/v1/reports/: router.py
backend/app/api/v1/schedules/: router.py
backend/app/api/v1/users/: router.py
backend/app/application/schemas/: analytics.py  report.py  user.py
backend/app/application/services/: analytics.py  auth.py  gemini.py  report.py  user.py
backend/app/core/: config.py  logging.py  security.py
backend/app/database/: seed.py  session.py
backend/app/domain/entities/: base.py  report.py  user.py
backend/app/domain/repositories/: analytics.py  report.py  user.py
backend/app/infrastructure/repositories/: analytics.py  report.py  user.py
ecotrack-ai-service/: Dockerfile  main.py  requirements.txt
ecotrack-ai-service/api/: detection_routes.py
ecotrack-ai-service/schemas/: detection_schema.py
public/: sw.js
src/: App.tsx  index.css  main.tsx  types.ts
(+85 files in other folders)
